show scores and improve css

--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
     <script src="./logic.js" defer></script>
 </head>
 <body>
+    <div class="scores">
+        <p class="player-score">Player Score: 0</p>
+        <p class="computer-score">Computer Score: 0</p>
+    </div>
+    <h1>Tic-Tac-Toe!</h1>
     <div class="play-button-container">
         <button class="play-btn" id="rock-btn">Rock</button>
         <button class="play-btn" id="paper-btn">Paper</button>
         <button class="play-btn" id="scissors-btn">Scissors</button>
     </div>
     <div id="result"></div>
-    <button id="reset" hidden="true">Reset</button>
+    <div>
+        <button id="reset" hidden="true">Reset</button>
+    </div>
 </body>
 </html>
